  * Make #set_flash_message respect i18n-set resource_name (by @latortuga)
  * Separate `sign_in` and `sign_up` on RegistrationsController (by @rubynortheast)
  * Add autofocus to default views (by @Radagaisus)
  * Support Mongoid 3 onwards (by @durran)
  * Unlock user on password reset (by @marcinb)

* bug fix
  * Fix a regression introduced on warden 1.2.1 (by @ejfinneran)
  * Properly camelize omniauth strategies (by @saizai)
  * Do not set flash messages for non navigational requests on session sign out (by @mathieul)
  * Set the proper fields as required on the lockable module (by @nickhoffman)
  * Respects Devise mailer default's reply_to (by @mrchrisadams)
  * Properly assign resource on `sign_in` related action (by @adammcnamara)
  * Unlockable could leak account existence on paranoid mode (by @latortuga)
  * `update_with_password` doesn't change encrypted password when it is invalid (by @nashby)
  * Properly handle namespaced models on Active Record generator (by @nashby)

== 2.1.2

* enhancements
  * Handle backwards incompatibility between Rails 3.2.6 and Thor 0.15.x

* bug fix
  * Fix regression on strategy validation on previous release

== 2.1.1 (yanked)

* enhancements
  * `sign_out_all_scopes` now locks warden and does not allow new logins in the same action
  * `Devise.omniauth_path_prefix` is available to configure omniauth path prefix
  * Redirect to sign in page when trying to access password#edit without a token (by @gbataille)
  * Allow a lambda in authenticate(d) routes helpers to further select the scope
  * Removed warnings on Rails 3.2.6 (by @nashby)

* bug fix
  * `update_with_password` now relies on assign_attributes and forwards the :as option (by @wtn)
  * Do not trigger timeout on sign in related actions
  * Timeout does not explode when reset_authentication_token! is accidentally defined by Active Model (by @remomueller)

* deprecations
  * Strategy#validate() no longer validates nil resources

== 2.1.0

* enhancements